update env_example and docker-compose

--- a/.env_example
+++ b/.env_example
@@ -3,7 +3,7 @@ db_user =
 db_host = 
 db_password = 
 db_name = 
-NEXT_PUBLIC_URL = 
-NEXTAUTH_URL = 
+NEXT_PUBLIC_URL = "http://localhost:3000"
+NEXTAUTH_URL = "http://localhost:3000/login/sigIn"
 NEXTAUTH_SECRET = 
-hash_number=
+hash_number= "8"
